--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,51 @@
 body {
     text-align: center;
+    margin:0;
+    padding:0;
+}
+
+
+.starter {
+	font-family: 'Press Start 2P', cursive;
+	width: 100%;
+	height: 100vh;
+	background: black;
+    display: flex;
+    flex-direction: column;  
+}
+
+.character {
+	display: flex;
+    justify-content: center;
+}
+
+.instruction {
+	color: white;
+	position: relative;
+	top: 150px;
+	font-size: 1.5rem;
+}
+
+.player {
+	position: relative;
+	top: 180px;
+}
+
+.start-button {
+	font-family: 'Press Start 2P', cursive;
+	background-color: #4caf50;
+	width: 25%;
+	height: 10%;
+	font-size: 1.5em;
+	color: white;
+	position: relative;
+	top: 250px;
+	left: 380px;
+	border: none;
+	border-radius:30px;
+
+}
+
+.chosen {
+	transition: 1s ease;
 }
