--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 body {
     text-align: center;
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    background-color: black;
 }
 
 
